## Process this file with automake to produce Makefile.in -*-Makefile-*-

# Files installed for use by gettextize.

aclocaldir = @aclocaldir@
aclocal_DATA = \
  ../../gettext-runtime/gnulib-m4/lib-ld.m4 \
  ../../gettext-runtime/gnulib-m4/lib-link.m4 \
  ../../gettext-runtime/gnulib-m4/lib-prefix.m4 \
  ../../gettext-runtime/m4/codeset.m4 \
  ../../gettext-runtime/m4/extern-inline.m4 \
  ../../gettext-runtime/m4/fcntl-o.m4 \
  ../../gettext-runtime/m4/gettext.m4 \
  ../../gettext-runtime/m4/glibc2.m4 \
  ../../gettext-runtime/m4/glibc21.m4 \
  ../../gettext-runtime/m4/iconv.m4 \
  ../../gettext-runtime/m4/intdiv0.m4 \
  ../../gettext-runtime/m4/intl.m4 \
  ../../gettext-runtime/m4/intldir.m4 \
  ../../gettext-runtime/m4/intlmacosx.m4 \
  ../../gettext-runtime/m4/intmax.m4 \
  ../../gettext-runtime/m4/inttypes_h.m4 \
  ../../gettext-runtime/m4/inttypes-pri.m4 \
  ../../gettext-runtime/m4/lcmessage.m4 \
  ../../gettext-runtime/m4/lock.m4 \
  ../../gettext-runtime/m4/longlong.m4 \
  ../../gettext-runtime/m4/nls.m4 \
  ../../gettext-runtime/m4/po.m4 \
  ../../gettext-runtime/m4/printf-posix.m4 \
  ../../gettext-runtime/m4/progtest.m4 \
  ../../gettext-runtime/m4/size_max.m4 \
  ../../gettext-runtime/m4/stdint_h.m4 \
  ../../gettext-runtime/m4/threadlib.m4 \
  ../../gettext-runtime/m4/uintmax_t.m4 \
  ../../gettext-runtime/m4/visibility.m4 \
  ../../gettext-runtime/m4/wchar_t.m4 \
  ../../gettext-runtime/m4/wint_t.m4 \
  ../../gettext-runtime/m4/xsize.m4

# Files installed for the examples.

examplesbuildauxdir = $(docdir)/examples/build-aux
examplesbuildaux_DATA = \
  ../gnulib-m4/gcj.m4 ../gnulib-m4/javacomp.m4 ../gnulib-m4/javaexec.m4 \
  ../gnulib-m4/csharpcomp.m4 ../gnulib-m4/csharpexec.m4 csharpexec-test.exe

# Generate this list with
# find . -type f -name '*.m4' -printf '%f\n' | sort | tr '\012' @ | sed 's/@$/%/;s/@/ \\@/g' | tr @% '\012\012'
EXTRA_DIST = README csharpexec-test.exe \
exported.m4 \
hostname.m4 \
setlocale.m4 \
siginfo.m4
